# test_1

./: .gitignore  README.md
AR_MagneticField/20240416_fem_smart/: 20230710_pybind.ipynb  (+20 more)
AR_MagneticField/20240416_fem_unet/: CG.cpp  CMakeLists.txt  MyFunction.h  MyFunctions3.py  MyGeneratorClass.py  MyModule copy.cpp  MyModule.cpp  MyModule2.cpp  MyModule_leg.cpp  akima4.csv  cal.cpp  camtest.py  config.py  contour.vtk  gosavector2.py  gosavector3.py  magic.h  main_AR4.py  make_dataset_auto_maltiprocess.py  material.vtk  output_mesh.msh  paraviewscript5.py  paraviewscript7_test.ipynb  requirements.txt  variablemesh2.msh1
AR_MagneticField/20240416_fem_unet/makemesh/: makemesh3.py
AR_MagneticField/20240416_fem_unet/vtk/: B_gosa_index_16874.vtk  B_gosa_index_22974.vtk  output_DL_index_19196.vtk  output_DL_index_451.vtk
FEM/3D/: 3d_magnet_iron_model.msh  3d_magnet_iron_model.msh1  CMakeLists.txt  FEM_3D.cpp  FEM_3D.h  GenMatrix.h  MyFunction.cpp  archive.cdb  build.ipynb  const.h  cube.msh  cube.msh1  edge.cpp  edge.h  element.cpp  element.h  hex_mesh.msh  hex_mesh.vtk  magic.h  main.py  mesh.msh  mesh.msh1  mesh3D.msh  meshing3D.py  meshing3D_2.py  meshing3Dv2.py  mfem_test.py  mfem_test_electromagnetics.py  model.msh  node.h  panda3d_test.py  requirements.txt  test.py
FEM/3D/50A470/: H_B.csv  README.txt  akima_coef.csv  nyu_B^2.csv
FEM/3D/env1/: pyvenv.cfg
FEM/3D/mesh/: magnet_iron_model.msh
FEM/3D/mesh_Dmodel/leg/: rot_node.csv  sta_element.csv
FEM/3D/mesh_Dmodel/new/: BoundaryNode.csv  StaElementData.csv  torquenodeindex.csv  スライド境界節点.csv  周期境界節点.csv
FEM/3D/vtk/: magnet.vtk
(+91 files in other folders)
